--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "johnrules"
+name = "rulesfinder"
 version = "0.1.0"
 authors = ["Simon Marechal <simon.marechal@synacktiv.com>"]
 edition = "2018"
