--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Simon Marechal <simon.marechal@synacktiv.com>"]
 edition = "2018"
 
 [dependencies]
-clap = "2.33.0"
+structopt = "0.3"
 crossbeam = "0.7.3"
 indicatif = "0.14.0"
 lazy_static = "1.4.0"
