--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ crossbeam = "0.7.3"
 indicatif = "0.14.0"
 lazy_static = "1.4.0"
 rand = "0.7.3"
+smallvec = { version = "1.8", features = ["union", "const_generics", "const_new"]}
